# updates

./: .gitignore  Cargo.toml  Dockerfile  README.md  askama.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: home.css  publish.js
cli/: Cargo.toml
cli/src/: cli.rs  command.rs  main.rs
client/: Cargo.toml
client/src/: agent.rs  client_error.rs  lib.rs  oidc.rs  packages_response.rs  push.rs  types.rs  updates_client.rs
client/src/push/: local_package.rs  missing_dependency.rs  push_plan.rs  push_report.rs
dbc/: sigma-racer.dbc
deb/: Cargo.toml
deb/src/: control.rs  deb_package.rs  depends.rs  human_size.rs  lib.rs  read.rs
deb/src/depends/: dependency_clause.rs  dependency_expr.rs  package_ref.rs  version_constraint.rs
deb/src/read/: deb_error.rs
scripts/: docker-build.sh  prepare-local.sh  publish-yocto-feed.sh
src/: api.rs  bundles.rs  catalog.rs  config.rs  dbc.rs  lib.rs  listing.rs  main.rs  packages.rs  templates.rs  vss.rs  web.rs
src/api/: channels_response.rs  dbc_response.rs  error_body.rs  health.rs  package_list_query.rs  packages_response.rs  page_query.rs  page_response.rs  vss_response.rs
src/catalog/: catalog.rs  channel_release.rs
src/dbc/: dbc_catalog.rs  dbc_file.rs  github_sync.rs
src/dbc/github_sync/: contents_entry.rs
src/listing/: catalog_spec.rs  dir_fingerprint.rs  list_cache.rs  page.rs  publish_error.rs
src/templates/: home_template.rs  package_row.rs  schema_row.rs
src/vss/: vss_catalog.rs  vss_file.rs
templates/: home.html
tests/: routes.rs
