[workspace]
resolver = "2"
members = [".", "deb", "client", "cli"]
default-members = [".", "cli"]

[workspace.package]

version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://sigmatactical.org"
publish = false

[workspace.dependencies]
ar = "0.9.0"
bytes = "1.12.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
debversion = "0.5.4"
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sigma-updates-client = { path = "client" }
sigma-updates-deb = { path = "deb" }
tar = "0.4.46"
thiserror = "2.0.18"
ureq = { version = "3.3.0", default-features = false, features = ["native-tls", "gzip"] }
urlencoding = "2.1.3"
xz2 = "0.1.7"

[package]

name = "sigma-updates"
description = "Debian package index and OTA catalog for Sigma Racer Wingman"
repository = "https://github.com/sigmatactical-org/updates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true

[[bin]]
name = "sigma-updates"
path = "src/main.rs"

[dependencies]
futures-util = { version = "0.3.32", default-features = false }
askama = "0.16.0"
bytes = { workspace = true }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde", "std"] }
serde = { workspace = true }
serde_json = { workspace = true }
sigma-pg = { git = "https://github.com/sigmatactical-org/sigma-pg.git" }
sigma-theme = { git = "https://github.com/sigmatactical-org/sigma-theme.git", default-features = false, features = ["askama", "warp"] }
sigma-updates-client = { workspace = true }
sigma-updates-deb = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "signal", "fs"] }
ureq = { workspace = true }
urlencoding = { workspace = true }
warp = { version = "0.4.3", features = ["server"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3.27.0"
warp = { version = "0.4.3", features = ["server", "test"] }
temp-env = { version = "0.3.6", features = ["async_closure"] }
