[package]

name = "sigma-updates-cli"
description = "CLI for listing, checking, and publishing packages to sigma-updates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true

[[bin]]
name = "sigma-updates-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
sigma-updates-client = { workspace = true }
sigma-updates-deb = { workspace = true }
