[package]

name = "sigma-updates-client"
description = "HTTP client for publishing and querying sigma-updates packages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sigma-updates-deb = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
urlencoding = { workspace = true }
