[package]

name = "sigma-updates-deb"
description = "Parse Debian .deb control metadata and dependency fields"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
ar = { workspace = true }
debversion = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
xz2 = { workspace = true }
